samples/_failures_safe/1761715306_eb1d76_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_512b422d.c: In function ‘main’:
./samples/SAFE/__tmp_512b422d.c:157:5: error: expected declaration or statement at end of input
  157 |     }
      |     ^
